# agent

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: agent_release.yml
agent/: CHANGELOG.md  Cargo.toml
agent/src/: main.rs  settings.rs
agent/src/settings/: mod.rs  settings.yml
demo-server/: Cargo.toml  manifest.yml
demo-server/src/: app.rs  dependencies.rs  main.rs
demo-server/src/api/: conversation.rs  mod.rs
demo-server/src/manifest/: manifest.yml  mod.rs
demo-server/src/settings/: mod.rs
demo-server/src/ws/: manager.rs  mod.rs  session.rs
demo-server/src/ws_rpc/: mod.rs
fastapi-server/: README.md  pyproject.toml
fastapi-server/app/: dependencies.py  main.py  manifest.py  rpc.py  settings.py
fastapi-server/app/api/: api.py
fastapi-server/app/ws/: manager.py  session.py
llm-diff/: Cargo.toml
llm-diff/src/: diff.rs  hunk.rs  lib.rs
llm-diff/tests/: changelog.test  test_diffs.rs
poem-server/: Cargo.toml  README.md  openapi.json
poem-server/src/: main.rs  manifest.rs  rpc_payload.rs
poem-server/src/api/: mod.rs
poem-server/src/ws/: manager.rs
rpc/: Cargo.toml
rpc/src/: lib.rs  macros.rs
rpc/src/operations/: current_time.rs  fs.rs  list_files.rs  mod.rs  time.rs
rpc/src/operations/commands/: mod.rs  run_python.rs  rustlings.rs  utils.rs
rpc/src/operations/fs/: create_directory.rs  create_file.rs  delete_content.rs  diff.rs  edit_file.rs  insert_content.rs  list_files.rs  mod.rs  move_file.rs  read_file.rs  remove_file.rs  replace_content.rs  utils.rs
test/: 12.py  dino.demo  ep12.diff  euler_problem_1.py  euler_problem_10.py  euler_problem_11.py  euler_problem_12.py  euler_problem_2.py  euler_problem_3.py  euler_problem_4.py  euler_problem_5.py  euler_problem_6.py  euler_problem_7.py  euler_problem_8.py  euler_problem_9.py  normal.diff  utils.py
