[package]
name = "agent"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.30"
config = "0.13.3"
futures-util = "0.3.28"
lazy_static = "1.4.0"
rpc = { version = "0.1.0", path = "../rpc" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.0", features = ["rustls-tls-native-roots"] }
url = { version = "2.4.1", features = ["serde"] }
uuid = "1.4.1"
