[package]
name = "demo-server"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
futures-util = "0.3.28"
lazy_static = "1.4.0"
poem = { version = "1.3.58", features = ["websocket"] }
poem-openapi = { version = "3.0.5", features = ["swagger-ui"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["full"] }
tracing-subscriber = "0.3.17"
url = { version = "2.4.1", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
