[tool.poetry]
name = "fastapi-server"
version = "0.1.0"
description = ""
authors = ["Kafonek <matt.kafonek@noteable.io>"]
readme = "README.md"
packages = [{include = "fastapi_server"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {version="^0.23.2", extras=["standard"]}
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
