[package]
name = "rpc"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_matches = "1.5.0"
chrono = "0.4.30"
enum-as-inner = "0.6.0"
enum_dispatch = "0.3.12"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
