[package]
name = "rpc"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
chrono = { version = "0.4.30", features = ["serde"] }
diffy = "0.3.0"
enum-as-inner = "0.6.0"
poem-openapi = "3.0.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["fs", "process"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }

[dev-dependencies]
rstest = "0.18.2"
serial_test = "2.0.0"
tempfile = "3.8.0"
tokio = { version = "1.32.0", features = ["test-util"] }
